crates/smart-config/tests/ui/derives/flattened_config_with_alias.stderr
error: aliases for flattened configs are not supported yet; did you mean to make a config nested?
  --> tests/ui/derives/flattened_config_with_alias.rs:10:30
   |
10 |     #[config(alias = "flat", flatten)]
   |                              ^^^^^^^
